# scouter-sdk

./: .env.example  .gitignore  LICENSE  PUBLISHING.md  README.md
.github/workflows/: publish.yml
node/: .env.example  package-lock.json  package.json  tsconfig.json
node/src/: client.ts  index.ts  models.ts
node/src/api/: backend.ts
node/src/classifier/: action-triage.ts
node/src/engine/: consequence.ts  intent.ts
node/src/guards/: api.ts  base.ts  database.ts  interceptor.ts  light.ts  shell.ts
node/src/integrations/: openai.ts
node/tests/: client.test.ts  guards.test.ts  triage.test.ts
python/: .env.example  pyproject.toml
python/examples/: 01_quickstart.py  02_guards_inline.py  03_openai_governance.py  04_connect_backend.py  README.md  guard_demo.py  hybrid_guard_demo.py  openai_chatbot.py  openai_example.py  test_deployed.py  test_openai.py  test_triage.py
python/scouter/: __init__.py  client.py  models.py
python/scouter/api/: __init__.py  backend.py
python/scouter/classifier/: __init__.py  action_triage.py
python/scouter/console/: __init__.py  logger.py
python/scouter/engine/: __init__.py  consequence.py  intent.py
python/scouter/guards/: __init__.py  api_guard.py  base.py  database_guard.py  execution_interceptor.py  light_guard.py  server_guard.py  shell_guard.py
python/scouter/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  openai.py  phidata.py
python/scouter/tools/: __init__.py  file_ops.py
python/tests/: test_backend_integration.py  test_client.py  test_e2e.py  test_engine.py
